Fix DUT alignment

--- a/main.css
+++ b/main.css
@@ -442,6 +442,9 @@ h2 {
   font-weight: bold;
   margin-bottom: .5em;
 }
+#section-formations .formation-content {
+  width: 100%;
+}
 #section-formations .formation-date {
   font-weight: bold;
   margin-left: 2em;
